WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
208278
REGRESSION (
r257507
): [ macOS ] ASSERTION FAILED: blockFormattingState.hasPositiveAndNegativeVerticalMargin(layoutBox)
https://bugs.webkit.org/show_bug.cgi?id=208278
Summary
REGRESSION (r257507): [ macOS ] ASSERTION FAILED: blockFormattingState.hasPos...
Jacob Uphoff
Reported
2020-02-26 17:10:59 PST
The following tests started to have assertion failures after commit
r257507
: fast/layoutformattingcontext/block-only/floating-and-next-previous-inflow-with-margin-with-no-border.html fast/layoutformattingcontext/block-only/floating-with-new-block-formatting-context.html fast/layoutformattingcontext/block-only/floats-and-block-formatting-roots.html fast/layoutformattingcontext/block-only/margin-collapse-first-last-are-floating.html These failures are happening on Catalina and Mojave debug History:
https://results.webkit.org/?suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&test=fast%2Flayoutformattingcontext%2Fblock-only%2Ffloating-and-next-previous-inflow-with-margin-with-no-border.html&test=fast%2Flayoutformattingcontext%2Fblock-only%2Ffloating-with-new-block-formatting-context.html&test=fast%2Flayoutformattingcontext%2Fblock-only%2Ffloats-and-block-formatting-roots.html&test=fast%2Flayoutformattingcontext%2Fblock-only%2Fmargin-collapse-first-last-are-floating.html
Failure: stderr: ASSERTION FAILED: blockFormattingState.hasPositiveAndNegativeVerticalMargin(layoutBox) ./layout/blockformatting/BlockMarginCollapse.cpp(513) : PositiveAndNegativeVerticalMargin::Values WebCore::Layout::BlockFormattingContext::MarginCollapse::positiveNegativeValues(const WebCore::Layout::Box &, WebCore::Layout::BlockFormattingContext::MarginCollapse::MarginType) const 1 0x520f50de9 WTFCrash 2 0x5044bacfb WTFCrashWithInfo(int, char const*, char const*, int) 3 0x5077b3d2d WebCore::Layout::BlockFormattingContext::MarginCollapse::positiveNegativeValues(WebCore::Layout::Box const&, WebCore::Layout::BlockFormattingContext::MarginCollapse::MarginType) const 4 0x5077b40e7 WebCore::Layout::BlockFormattingContext::MarginCollapse::positiveNegativeMarginBefore(WebCore::Layout::Box const&, WebCore::Layout::UsedVerticalMargin::NonCollapsedValues) const::$_14::operator()() const 5 0x5077b3e6b WebCore::Layout::BlockFormattingContext::MarginCollapse::positiveNegativeMarginBefore(WebCore::Layout::Box const&, WebCore::Layout::UsedVerticalMargin::NonCollapsedValues) const 6 0x5077b4656 WebCore::Layout::BlockFormattingContext::MarginCollapse::precomputedPositiveNegativeValues(WebCore::Layout::Box const&, WebCore::Layout::BlockFormattingContext::MarginCollapse::MarginType) const 7 0x5077b4987 WebCore::Layout::BlockFormattingContext::MarginCollapse::precomputedPositiveNegativeMarginBefore(WebCore::Layout::Box const&, WebCore::Layout::UsedVerticalMargin::NonCollapsedValues) const::$_17::operator()() const 8 0x5077b46eb WebCore::Layout::BlockFormattingContext::MarginCollapse::precomputedPositiveNegativeMarginBefore(WebCore::Layout::Box const&, WebCore::Layout::UsedVerticalMargin::NonCollapsedValues) const 9 0x5077acf3c WebCore::Layout::BlockFormattingContext::MarginCollapse::precomputedMarginBefore(WebCore::Layout::Box const&, WebCore::Layout::UsedVerticalMargin::NonCollapsedValues) 10 0x5077ac78c WebCore::Layout::BlockFormattingContext::precomputeVerticalPosition(WebCore::Layout::Box const&, WebCore::Layout::HorizontalConstraints const&, WebCore::Layout::VerticalConstraints const&) 11 0x5077ac6b7 WebCore::Layout::BlockFormattingContext::precomputeVerticalPositionForAncestors(WebCore::Layout::Box const&, WebCore::Layout::BlockFormattingContext::ConstraintsPair<WebCore::Layout::HorizontalConstraints> const&, WebCore::Layout::BlockFormattingContext::ConstraintsPair<WebCore::Layout::VerticalConstraints> const&) 12 0x5077abe7b WebCore::Layout::BlockFormattingContext::computePositionToAvoidFloats(WebCore::Layout::FloatingContext const&, WebCore::Layout::Box const&, WebCore::Layout::BlockFormattingContext::ConstraintsPair<WebCore::Layout::HorizontalConstraints> const&, WebCore::Layout::BlockFormattingContext::ConstraintsPair<WebCore::Layout::VerticalConstraints> const&) 13 0x5077aa965 WebCore::Layout::BlockFormattingContext::layoutInFlowContent(WebCore::Layout::InvalidationState&, WebCore::Layout::HorizontalConstraints const&, WebCore::Layout::VerticalConstraints const&) 14 0x50778f09e WebCore::Layout::LayoutContext::layoutFormattingContextSubtree(WebCore::Layout::ContainerBox const&, WebCore::Layout::InvalidationState&) 15 0x50778ed57 WebCore::Layout::LayoutContext::layoutWithPreparedRootGeometry(WebCore::Layout::InvalidationState&) 16 0x50778ebe3 WebCore::Layout::LayoutContext::layout(WebCore::LayoutSize const&, WebCore::Layout::InvalidationState&) 17 0x507b17c13 WebCore::FrameViewLayoutContext::layoutUsingFormattingContext() 18 0x507b18feb WebCore::FrameViewLayoutContext::layout() 19 0x506d0b613 WebCore::Document::implicitClose() 20 0x5078b705b WebCore::FrameLoader::checkCallImplicitClose() 21 0x5078b6b3a WebCore::FrameLoader::checkCompleted() 22 0x5078b4dd5 WebCore::FrameLoader::finishedParsing() 23 0x506d1e340 WebCore::Document::finishedParsing() 24 0x50749a1b8 WebCore::HTMLConstructionSite::finishedParsing() 25 0x5074e2475 WebCore::HTMLTreeBuilder::finished() 26 0x5074a13d8 WebCore::HTMLDocumentParser::end() 27 0x50749f358 WebCore::HTMLDocumentParser::attemptToRunDeferredScriptsAndEnd() 28 0x50749f074 WebCore::HTMLDocumentParser::prepareToStopParsing() 29 0x5074a143f WebCore::HTMLDocumentParser::attemptToEnd() 30 0x5074a1514 WebCore::HTMLDocumentParser::finish() 31 0x507851f9a WebCore::DocumentWriter::end() LEAK: 1 WebPageProxy
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2020-02-26 17:11:22 PST
<
rdar://problem/59828533
>
alan
Comment 2
2020-02-26 18:56:48 PST
Committed
r257549
: <
https://trac.webkit.org/changeset/257549
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug