REGRESSION (r257507): [ macOS ] ASSERTION FAILED: blockFormattingState.hasPositiveAndNegativeVerticalMargin(layoutBox) https://bugs.webkit.org/show_bug.cgi?id=208278 <rdar://problem/59828533>

Fix mismatching call after r257507.

* layout/blockformatting/PrecomputedBlockMarginCollapse.cpp:
(WebCore::Layout::BlockFormattingContext::MarginCollapse::precomputedPositiveNegativeValues const):


Canonical link: https://commits.webkit.org/221232@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@257549 268f45cc-cd09-0410-ab3c-d52691b4dbfc